fixed overscroll making white visible

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,6 @@
   width: 10px;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: rgb(15 23 42);
-}
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: rgb(100 100 100);
@@ -23,4 +18,9 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(140 140 140);
+}
+
+/* Background color to ensure overscroll remains colored */
+html {
+  background-color: rgb(15 23 42);
 }
